# memadrift

./: .gitignore  PHASE_1.md  PROJECT_PLAN.md  pyproject.toml  schema.yaml
fixtures/: index_with_includes.md  malformed_memory.md  overlong_memory.md  sample.env  sample_memory.md  sample_schema.yaml  topic_memory.md
src/memadrift/: audit.py  cli.py  external.py  fixer.py  ids.py  models.py  parser.py  pending.py  reality.py  schema.py  scorer.py  secrets.py  validators.py
tests/: test_audit.py  test_cli.py  test_cli_phase2.py  test_external.py  test_fixer.py  test_ids.py  test_models.py  test_parser.py  test_parser_multifile.py  test_pending.py  test_reality.py  test_schema.py  test_scorer.py  test_secrets.py  test_validators.py
